--- a/index.html
+++ b/index.html
@@ -11,21 +11,10 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <h1 id="player-text">Tic Tac Toe</h1>
-        </div>
-        <div class="main">
+            <h1 id="text-display">Tic Tac Toe</h1>
             <button id="restart-button">Restart</button>
-            <div class="board-display" id="gameboard">
-                <div class="box" id="0"></div>
-                <div class="box" id="1"></div>
-                <div class="box" id="2"></div>
-                <div class="box" id="3"></div>
-                <div class="box" id="4"></div>
-                <div class="box" id="5"></div>
-                <div class="box" id="6"></div>
-                <div class="box" id="7"></div>
-                <div class="box" id="8"></div>
-            </div>
+        </div>
+        <div class="main" id="boxes">
         </div>
         <div class="footer"></div>
     </div>
