Finalized game logic updated dipslay Updated styling. Checked for bugs.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
-            <h1 id="text-display">Tic Tac Toe</h1>
-            <button id="restart-button">Restart</button>
-        </div>
-        <div class="main" id="boxes">
+        <div class="header"></div>
+        <div class="main">
+            <div class="gameboard"></div>
         </div>
         <div class="footer"></div>
     </div>
